# websocket

./: .gitignore  README.md  Websocket.cpp  Websocket.h  base64.h  http.h  leet.h  main.cpp  main2.cpp  meson.build
sha1/: sha1.cpp  sha1.hpp
subprojects/: socks.wrap
subprojects/socks/: .gitignore  Host.cpp  Host.h  SockDgram.cpp  SockDgram.h  SockError.h  SockHandle.cpp  SockHandle.h  SockPlatform.cpp  SockPlatform.h  SockStream.cpp  SockStream.h  meson.build  windows.txt
subprojects/socks/examples/: basic.cpp  forward.cpp  http.cpp
